# SimpleATM

./: CMakeLists.txt  ReadMe.md  main.cpp
include/: account.h  atm.h  bank.h  card.h
src/: account.cpp  atm.cpp  bank.cpp  card.cpp
